[package]
name = "naifspice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
naifspice-sys = {path = "../naifspice-sys"}
chrono = { version = "0.4", optional = true}

[features]
export_sys = []

[dev-dependencies]
serial_test = "0.6.0"
tempfile = "3.3.0"